# smarch

./: .coveragerc  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  setup.py
.github/workflows/: test.yml
docker/samba/: Dockerfile  smb.conf
docs/: Issues.md
src/smarch/: handler.py
tests/: test_handler.py
tests/data/: README.md
tests/integration/: test_integration.py
